--- a/stylesheet.css
+++ b/stylesheet.css
@@ -38,7 +38,7 @@ a {
 }
 
 .top-wrapper {
-  padding: 180px 0 100px 0;
+  padding: 50px 0 100px 0;
   background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
   background-size: cover;
   color: white;
@@ -99,7 +99,7 @@ a {
 header {
   height: 65px;
   width: 100%;
-  background-color: rgba(34, 49, 52, 0.9);
+  background-color: #0C2AE9;
   position: fixed;
   top: 0;
   z-index: 10;
@@ -213,7 +213,7 @@ header {
 .heading {
   padding-top: 80px;
   padding-bottom: 50px;
-  color: #5f5d60;
+  color: #0C2AE9;
 }
 
 .heading h2 {
